# ed25519

./: Cargo.toml  Makefile  README.md  package.json  rust-toolchain.toml
.cargo/: config.toml
.config/: spellcheck.dic  spellcheck.toml
.github/workflows/: main.yml
ed25519-verify/: Cargo.toml
ed25519-verify/src/: config.rs  field.rs  instruction.rs  instruction_data.rs  lib.rs  program.rs  scalar.rs  test_utils.rs  verifier.rs
ed25519-verify/tests/: verify_instruction.rs
ed25519-verify/tests/common/: mod.rs
program/: Cargo.toml
program/src/: instruction.rs  instruction_data.rs  lib.rs  processor.rs  scalar.rs
program/tests/: mollusk.rs  process_instruction.rs
program/tests/common/: mod.rs
