[workspace]
members = ["program"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_arch, values("bpf"))',
    'cfg(feature, values("custom-panic"))',
] }

[workspace.dependencies]
bincode = "1.3.3"
ed25519-dalek = "2.1.1"
mollusk-svm = "0.13.1"
serde = { version = "1.0.228", default-features = false }
serde_derive = "1.0.228"
solana-account-info = "3.1.1"
solana-curve25519 = "4.0.1"
solana-instruction = "3.3.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
solana-program-runtime = { version = "4.0.0", features = ["agave-unstable-api"] }
solana-pubkey = "4.1.0"
solana-sdk-ids = "3.1.0"
solana-sha512-hasher = { version = "1.0.1", features = ["sha2"] }
