[workspace]
members = ["ed25519-verify", "program"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_arch, values("bpf"))',
    'cfg(feature, values("custom-panic"))',
] }

[workspace.dependencies]
ed25519-dalek = "2.1.1"
mollusk-svm = "0.13.1"
pinocchio = "0.11.2"
serde = { version = "1.0.228", default-features = false }
serde_derive = "1.0.228"
solana-account = "3.4.0"
solana-curve25519 = "4.0.1"
solana-ed25519-verify = { path = "ed25519-verify", version = "4.0.0", default-features = false }
solana-instruction = "3.3.0"
solana-program-error = "3.0.1"
solana-program-runtime = { version = "4.0.0", features = ["agave-unstable-api"] }
solana-pubkey = "4.1.0"
solana-sha512-hasher = { version = "1.0.1", features = ["sha2"] }
