[package]
name = "solana-ed25519-verify"
version = "4.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []
bincode = ["dep:bincode", "instruction"]
dev-context-only-utils = ["bincode"]
instruction = ["dep:solana-instruction", "dep:solana-sdk-ids", "serde"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
bincode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-curve25519 = { workspace = true }
solana-instruction = { workspace = true, optional = true }
solana-program-error = { workspace = true }
solana-sdk-ids = { workspace = true, optional = true }
solana-sha512-hasher = { workspace = true }

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
ed25519-dalek = { workspace = true }

[lints]
workspace = true
