[package]
name = "solana-ed25519-verify"
version = "4.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []
dev-context-only-utils = ["instruction"]
instruction = ["dep:solana-instruction", "dep:solana-pubkey"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-curve25519 = { workspace = true }
solana-instruction = { workspace = true, optional = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true, optional = true }
solana-sha512-hasher = { workspace = true }

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
ed25519-dalek = { workspace = true }

[dev-dependencies]
solana-ed25519-verify = { path = ".", features = ["dev-context-only-utils"] }

[lints]
workspace = true
