[package]
name = "solana-ed25519-program"
version = "4.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = { workspace = true }
solana-ed25519-verify = { workspace = true, default-features = false }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-ed25519-verify = { workspace = true, features = ["dev-context-only-utils"] }
solana-instruction = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-sha512-hasher = { workspace = true }

[lints]
workspace = true
